--- a/src/template.html
+++ b/src/template.html
@@ -4,6 +4,31 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+  <body>
+    <form action="submit">
+      <input class="search" type="text" placeholder="Search city" />
+    </form>
+
+    <div class="error"></div>
+
+    <div class="container">
+      <div class="icon"></div>
+      <div class="address"></div>
+      <div class="data-container">
+        <div class="temperature"></div>
+        <div class="accessories">
+          <div class="precip"></div>
+          <div class="wspd"></div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
